--- a/package.json
+++ b/package.json
@@ -74,57 +74,57 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "@angular/common": "5.2.10",
-    "@angular/core": "5.2.10"
+    "@angular/common": "^7.1.1",
+    "@angular/core": "^7.1.1"
   },
   "devDependencies": {
-    "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/compiler-cli": "5.2.10",
-    "@angular/core": "5.2.10",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
-    "@compodoc/compodoc": "1.1.2",
-    "@types/jasmine": "^2.5.47",
-    "@types/karma": "^1.7.0",
-    "@types/node": "^8.0.0",
-    "@types/webpack": "^3.0.13",
-    "@types/webpack-env": "^1.13.0",
+    "@angular/common": "^7.1.1",
+    "@angular/compiler": "^7.1.1",
+    "@angular/compiler-cli": "^7.1.1",
+    "@angular/core": "^7.1.1",
+    "@angular/platform-browser": "^7.1.1",
+    "@angular/platform-browser-dynamic": "^7.1.1",
+    "@compodoc/compodoc": "1.1.7",
+    "@types/jasmine": "^3.3.0",
+    "@types/karma": "^3.0.1",
+    "@types/node": "^10.12.11",
+    "@types/webpack": "^4.4.20",
+    "@types/webpack-env": "^1.13.6",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^5.0.0",
     "codecov": "^3.0.0",
     "codelyzer": "^4.3.0",
-    "concurrently": "^3.4.0",
-    "css-loader": "^0.28.1",
-    "gh-pages": "^1.0.0",
+    "concurrently": "^4.1.0",
+    "css-loader": "^1.0.1",
+    "gh-pages": "^2.0.1",
     "gulp": "^3.9.1",
-    "gulp-inline-ng2-template": "^4.0.0",
-    "gulp-sass": "^3.1.0",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine-core": "^2.6.1",
+    "gulp-inline-ng2-template": "^5.0.1",
+    "gulp-sass": "^4.0.2",
+    "istanbul-instrumenter-loader": "^3.0.1",
+    "jasmine-core": "^3.3.0",
     "json-loader": "^0.5.4",
-    "karma": "^1.7.0",
+    "karma": "^3.1.3",
     "karma-chrome-launcher": "^2.1.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "^1.1.0",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "^2.0.1",
     "karma-mocha-reporter": "^2.2.3",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.0",
-    "node-sass": "^4.5.2",
+    "node-sass": "^4.10.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
-    "rxjs": "^5.5.10",
-    "sass-loader": "^6.0.5",
-    "source-map-explorer": "^1.3.3",
+    "rxjs": "^6.3.3",
+    "sass-loader": "^7.1.0",
+    "source-map-explorer": "^1.6.0",
     "to-string-loader": "^1.1.5",
-    "ts-node": "^6.0.0",
-    "tslint": "^5.2.0",
-    "typescript": "^2.6.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.6.0",
     "webpack-angular-externals": "^1.0.2",
-    "webpack-cli": "^2.0.15",
+    "webpack-cli": "^3.1.2",
     "webpack-rxjs-externals": "^2.0.0",
-    "zone.js": "^0.8.10"
+    "zone.js": "^0.8.26"
   }
 }
